--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Launch Client (.NET)",
+      "name": "Launch Client (Debug)",
       "type": "clr",
       "request": "launch",
       "preLaunchTask": "Build (Debug)",
@@ -14,6 +14,23 @@
         "modding test world",
         "--addModPath",
         "${workspaceFolder}/bin/debug"
+      ],
+      "console": "internalConsole",
+      "internalConsoleOptions": "openOnSessionStart"
+    },
+    {
+      "name": "Launch Client (Release)",
+      "type": "clr",
+      "request": "launch",
+      "preLaunchTask": "Build (Release)",
+      "program": "${env:VINTAGE_STORY}/Vintagestory.exe",
+      "args": [
+        "--playStyle",
+        "preset-surviveandbuild",
+        "--openWorld",
+        "modding test world",
+        "--addModPath",
+        "${workspaceFolder}/bin/release"
       ],
       "console": "internalConsole",
       "internalConsoleOptions": "openOnSessionStart"
