--- a/pickupartist.csproj
+++ b/pickupartist.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFramework>net7.0-windows</TargetFramework>
-		<TargetGameVersion>1.20.7</TargetGameVersion>
+		<TargetFramework>net8.0</TargetFramework>
+		<TargetGameVersion>1.21.5</TargetGameVersion>
 		<LangVersion>11</LangVersion>
 		<VSPath>$(VINTAGE_STORY)</VSPath>
 		<ModVersion>0.3.1</ModVersion>
@@ -28,13 +28,13 @@
 		</None>
 	</ItemGroup>
 	<Target Name="Package" AfterTargets="PostBuildEvent" Condition="'$(Configuration)' == 'debug'">
-		<ZipDirectory DestinationFile="bin/debug/$(TargetName)-debug-$(ModVersion).zip"
+		<ZipDirectory DestinationFile="bin/Debug/$(TargetName)-debug-$(ModVersion).zip"
 			SourceDirectory="$(TargetDir)" Overwrite="true" />
 		<RemoveDir Directories="$(TargetDir)" />
 	</Target>
 	<Target Name="PackageRelease" AfterTargets="PostBuildEvent"
 		Condition="'$(Configuration)' == 'release'">
-		<ZipDirectory DestinationFile="bin/release/$(TargetName)-$(ModVersion).zip"
+		<ZipDirectory DestinationFile="bin/Release/$(TargetName)-$(ModVersion).zip"
 			SourceDirectory="$(TargetDir)" Overwrite="true" />
 		<RemoveDir Directories="$(TargetDir)" />
 	</Target>
