--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,7 @@
         "--openWorld",
         "modding test world",
         "--addModPath",
-        "${workspaceFolder}/bin/debug"
+        "${workspaceFolder}/bin/Debug"
       ],
       "console": "internalConsole",
       "internalConsoleOptions": "openOnSessionStart"
@@ -30,7 +30,7 @@
         "--openWorld",
         "modding test world",
         "--addModPath",
-        "${workspaceFolder}/bin/release"
+        "${workspaceFolder}/bin/Release"
       ],
       "console": "internalConsole",
       "internalConsoleOptions": "openOnSessionStart"
@@ -47,7 +47,7 @@
         "--openWorld",
         "modding test world",
         "--addModPath",
-        "${workspaceFolder}/bin/debug"
+        "${workspaceFolder}/bin/Debug"
       ],
       "console": "internalConsole",
       "internalConsoleOptions": "openOnSessionStart"
@@ -64,7 +64,7 @@
         "--openWorld",
         "modding test world",
         "--addModPath",
-        "${workspaceFolder}/bin/release"
+        "${workspaceFolder}/bin/Release"
       ],
       "console": "internalConsole",
       "internalConsoleOptions": "openOnSessionStart"
